src/objects/Debug__c.object
<CustomObject>
    <fields>
        <fullName>BusinessCase__c</fullName>
        <label>BusinessCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Debug</label>
    <nameField>
        <label>Debug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>